--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   justify-content: center;
   text-align: center;
   line-height: 5px;
+  max-height: fit-content;
 }
 
 .container{
@@ -19,3 +20,118 @@
   text-align: center;
 }
 
+/*bar side*/
+
+.alarm {
+  height: 20px;
+  padding: 10px;
+  background: #ffffff;
+  border-radius: 5px;
+}
+
+.alarm1{
+  height: 20px;
+  padding: 10px;
+  background: #ffffff;
+  border-radius: 5px;
+}
+
+.alarm2{
+  height: 20px;
+  padding: 10px;
+  background: rgb(254, 185, 57);
+  border-radius: 5px;
+}
+
+.bar {
+display: flex;
+}
+
+#bar-1 {
+  padding: 10px;
+  background-color: rgb(239, 198, 93);
+  border-radius: 10px;
+  margin-right: 400px;
+  margin-left: 400px;
+  margin-bottom: 10px;
+}
+
+#bar-2 {
+  padding: 10px;
+  background-color: rgb(161, 250, 161);
+  border-radius: 10px;
+  margin-right: 400px;
+  margin-left: 400px;
+  margin-bottom: 10px;
+}
+
+#bar-3{
+  padding: 10px;
+  background-color: rgb(251, 154, 154);
+  border-radius: 10px;
+  margin-right: 400px;
+  margin-left: 400px;
+  margin-bottom: 10px;
+}
+
+#bar-4{
+  padding: 10px;
+  background-color: #bbb;
+  border-radius: 10px;
+  margin-right: 400px;
+  margin-left: 400px;
+  margin-bottom: 10px;
+}
+
+#bar-5{
+  padding: 10px;
+  background-color: rgb(255, 250, 161);
+  border-radius: 10px;
+  margin-right: 400px;
+  margin-left: 400px;
+  margin-bottom: 10px;
+}
+
+.heading {
+  padding-left: 20px;
+  padding-right: 180px;
+}
+
+.heading1 {
+  padding-left: 20px;
+  padding-right: 200px;
+}
+
+.heading2 {
+  padding-left: 20px;
+  padding-right: 275px;
+}
+
+.heading3{
+  padding-left: 20px;
+  padding-right: 235px;
+}
+
+.part1{
+  padding: 10px 10px;
+  background: goldenrod;
+  border-radius: 10px;
+}
+
+.part2{
+  padding: 10px 10px;
+  background: rgb(77, 255, 77);
+  border-radius: 10px;
+}
+
+.part3{
+  padding: 10px 10px;
+  background: rgb(255, 93, 93);
+  border-radius: 10px;
+}
+
+.part4{
+  padding: 10px 10px;
+  border-radius: 10px;
+  display: none;
+}
