--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
   padding-right: 180px;
 }
 
-/*.heading1 {
+.heading1 {
   padding-left: 20px;
   padding-right: 200px;
 }
@@ -113,7 +113,7 @@
 .heading3{
   padding-left: 20px;
   padding-right: 235px;
-}*/
+}
 
 .part1{
   padding: 10px 10px;
